--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body, .editor-styles-wrapper {
 <div class="wp-site-blocks">
 <header class="wp-block-template-part">
 <div class="wp-container-622571d4cbfd8 wp-elements-622571d4cb9fd wp-block-group alignfull has-background-color has-text-color has-background has-link-color" style="background-color:#002240;padding-top:0px;padding-bottom:0px">
-<header class="alignwide animated bounceInDown wp-block-template-part">
+<header class="alignwide animated wp-block-template-part">
 <div class="wp-container-622571d4cb824 wp-block-group has-background" style="background-color:#002240">
 <div class="wp-container-622571d4cb38e wp-block-group alignwide" style="padding-top:var(--wp--custom--spacing--small, 1.25rem);padding-bottom:var(--wp--custom--spacing--large, 8rem)">
 <div class="wp-container-622571d4ca48b wp-block-group">
