Removed width limit

--- a/lista_compras/index.html
+++ b/lista_compras/index.html
@@ -374,7 +374,7 @@ button{
 }
 
 table{
-    width: 100%;
+    width: 75%;
     table-layout: fixed;
     border-collapse: collapse;
     text-align: left;
@@ -432,7 +432,12 @@ td{
     display: grid;
     float: left;
     grid: 25%;
-}</style>
+}
+.wp-container-62260b8b6065d.wp-block-group {
+  width: 100%;
+  max-width: 100%;
+}	
+	</style>
     
     <section class="contenedor">
 
