--- a/lista_compras/index.html
+++ b/lista_compras/index.html
@@ -433,7 +433,7 @@ td{
     float: left;
     grid: 25%;
 }
-.wp-container-62260b8b6065d.wp-block-group {
+.wp-container-622571db36cc3 > * {
   width: 100%;
   max-width: 100%;
 }	
