Minor grammar correction

--- a/mi_cv/index.html
+++ b/mi_cv/index.html
@@ -231,7 +231,7 @@ body, .editor-styles-wrapper {
 
 
 
-<p>Utilizando tanto cursos como conocimientos obtenidos smediante mi educación o experiencia personal, llevo a cabo el código para mantener el funcionamiento y estabilidad de sistemas web. </p>
+<p>Utilizando tanto cursos como conocimientos obtenidos mediante mi educación o experiencia personal, llevo a cabo el código para mantener el funcionamiento y estabilidad de sistemas web. </p>
 </div>
 </div>
 </div>
