Changed max width to list container

--- a/lista_compras/index.html
+++ b/lista_compras/index.html
@@ -338,7 +338,7 @@ function anular(){
 
 
 <div class="entry-content wp-block-post-content is-layout-constrained">
-<div class="wp-block-group is-layout-flow">
+<div class="wp-block-group is-layout-flow" style="max-width:80vw">
 <style>:root{
     --primario:#1a2bff
 }
