--- a/mi_cv/index.html
+++ b/mi_cv/index.html
@@ -126,7 +126,7 @@ body, .editor-styles-wrapper {
 					<div class="wp-block-navigation__responsive-dialog" aria-label="Menú">
 							<button aria-label="Cerrar el menú" data-micromodal-close class="wp-block-navigation__responsive-container-close"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" width="24" height="24" aria-hidden="true" focusable="false"><path d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"></path></svg></button>
 						<div class="wp-block-navigation__responsive-container-content" id="modal-2-content">
-							<ul class="wp-block-navigation__container"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content"><span class="wp-block-navigation-item__label">Inicio</span></a></li></ul>
+							<ul class="wp-block-navigation__container"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content"><span class="wp-block-navigation-item__label"  href="/">Inicio</span></a></li></ul>
 <ul class="wp-block-page-list">
 <li class="wp-block-pages-list__item wp-block-navigation-item open-on-hover-click"><a class="wp-block-pages-list__item__link wp-block-navigation-item__content" href="/lista_compras/">Lista de compras</a></li>
 <li class="wp-block-pages-list__item current-menu-item wp-block-navigation-item open-on-hover-click"><a class="wp-block-pages-list__item__link wp-block-navigation-item__content" href="/mi_cv/" aria-current="page">Mi Curriculum Vitae</a></li>
